<resources>
    <string name="app_name">Mortgage Calculator</string>

    <string name="home_value">Home Value ($)</string>
    <string name="down_payment">Down Payment ($)</string>
    <string name="apr">APR in %</string>
    <string name="terms">Terms in Yrs</string>
    <string name="tax_rate">Tax Rate in %</string>
    <string name="action_settings">Settings</string>
    <string name="dollar">$</string>
    <string name="calculatebuttton">Calculate</string>
    <string name="payoffdate">Pay Off Date</string>
    <string name="resetbutton">Reset</string>
    <string name="totaltaxpaid">Total Tax Paid</string>
    <string name="totalinterestpaid">Total Interest Paid</string>
    <string name="monthlypayment">Monthly Payment</string>
    <string-array name="numbers">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>
</resources>
