<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@android:color/white" android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CalculateLoan">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/HomeValue"
            android:hint="@string/home_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_gravity="center_horizontal">
        </EditText>

        <EditText
            android:id="@+id/DownPaymentValue"
            android:hint="@string/down_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_gravity="center_horizontal">
        </EditText>

        <Spinner
            android:id="@+id/terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/numbers">
        </Spinner>
        <EditText
            android:id="@+id/InterestRateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apr"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/TaxRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tax_rate"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_gravity="center_horizontal" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="260dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/Actions">
        <Button
            android:id="@+id/Button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:text="Calculate"
            android:layout_marginLeft="50dp"
            android:textColor="#400080"
            android:onClick="sendValues"
            android:layout_alignParentTop="true" />
        <Button
            android:id="@+id/Reset"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="#400080"
            android:text="Reset"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/Button"
            android:layout_toEndOf="@+id/Button"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="320dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="Total Tax Paid"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/TotalTaxPaid"
            android:editable="false"
            android:focusable="false"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:hint="$"
            android:layout_gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="360dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="Total Interest Paid"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/TotalInterestPaid"
            android:layout_width="130dp"
            android:editable="false"
            android:focusable="false"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:hint="$"
            android:layout_gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="400dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="Monthly Payment"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/MonthlyPayment"
            android:layout_width="130dp"
            android:editable="false"
            android:focusable="false"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:hint="$"
            android:layout_gravity="right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="440dp">
        <TextView
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:text="Pay Off Date"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/PayOffDate"
            android:layout_width="130dp"
            android:editable="false"
            android:focusable="false"
            android:layout_height="match_parent"
            />
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:layout_gravity="right"/>
    </LinearLayout>

</RelativeLayout>
